# travel_mate

./: README.md  app.py  docker-compose.yml  ecosystem.config.js  mongo_collection_names.py  pyproject.toml  travel_bot_exception.py  travel_bot_router.py  travel_bot_service.py
auth/: auth_middleware.py  auth_models.py  auth_repository.py  auth_routes.py  auth_service.py  jwt_exception.py  jwt_util.py
models/: api_responses.py  status_code.py  travel_models.py
utils/: commons.py  config.py  data_sources_manager.py  llm_manager.py  logger.py  mongo_db_manager.py  pdf_manager.py  postgre_db_manager.py  prompt_templates.py
