[project]
name = "travel-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "cryptography>=3.4.8",
    "databases[postgresql]==0.9.0",
    "email-validator==2.0.0",
    "fastapi==0.104.1",
    "httpx>=0.27.0",
    "langchain>=0.2.17",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.43",
    "langchain-openai>=0.1.11",
    "langsmith>=0.1.0",
    "motor==3.3.2",
    "openai>=1.24.0,<2.0.0",
    "pandas>=2.2.3",
    "pillow==10.1.0",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.0.0",
    "pyjwt==2.8.0",
    "PyPDF2==3.0.1",
    "pymongo==4.6.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.6",
    "reportlab==4.0.7",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
